src/eval/snapshots/monkey_language_server__eval__test__builtin_last_bad_arg_count_0.snap
---
source: src/eval/test.rs
description: let x = last();
expression: "format!(\"{:#?}\\n\\n========================\\n\\n{:#?}\", env, diags)"
---
Environment {
    store: [
        Value("x", Unknown, (0,4)->(0,5), (0,0)->(0,15)),
    ],
    refs: [
        Pos("last", "(0,8)->(0,12)"),
        Pos("x", "(0,4)->(0,5)"),
    ],
    scope_range: "(0,0)->(0,15)",
    parent_range: None,
    children: [],
}

========================

[
    "TypeError: mismatched arg and param count. Expected 1, got 0. (0,12)->(0,13)",
]
