src/eval/snapshots/monkey_language_server__eval__test__builtin_push_bad_arg.snap
---
source: src/eval/test.rs
description: "let x = push(\"foo\", 4);"
expression: "format!(\"{:#?}\\n\\n========================\\n\\n{:#?}\", env, diags)"
---
Environment {
    store: [
        (
            "x",
            Spanned(Array, (0,4)->(0,5)),
        ),
    ],
    refs: [
        Spanned("push", "(0,8)->(0,12)"),
        Spanned("x", "(0,4)->(0,5)"),
    ],
    parent_id: None,
    children: [],
    id: 0,
}

========================

[
    Error(GenericTypeError("unable to push value into 'str'"), (0,12)->(0,13)),
]
