src/eval/snapshots/monkey_language_server__eval__test__builtin_push_bad_arg_count.snap
---
source: src/eval/test.rs
description: "let x = push([1,2,3]);"
expression: "format!(\"{:#?}\\n\\n========================\\n\\n{:#?}\", env, diags)"
---
Environment {
    store: [
        (
            "x",
            Spanned(Array, (0,4)->(0,5)),
        ),
    ],
    refs: [
        Spanned("push", "(0,8)->(0,12)"),
        Spanned("x", "(0,4)->(0,5)"),
    ],
    scope_range: "(0,0)->(0,22)",
    parent_range: None,
    children: [],
}

========================

[
    "TypeError: mismatched arg and param count. Expected 2, got 1. (0,12)->(0,13)",
]
