src/eval/snapshots/monkey_language_server__eval__test__expr_after_func_return.snap
---
source: src/eval/test.rs
description: "\nlet add = fn(x,y) {\n    return x + y;\n    let a = \"foo\";\n};\n"
expression: "format!(\"{:#?}\\n\\n========================\\n\\n{:#?}\", env, diags)"
---
Environment {
    store: [
        (
            "add",
            Pos(Function(Some(2), Unknown), (1,0)->(4,2)),
        ),
    ],
    refs: [
        Pos("add", "(1,4)->(1,7)"),
    ],
    scope_range: "(0,0)->(4,2)",
    parent_range: None,
    children: [
        Environment {
            store: [
                (
                    "x",
                    Pos(Unknown, (1,13)->(1,14)),
                ),
                (
                    "y",
                    Pos(Unknown, (1,15)->(1,16)),
                ),
            ],
            refs: [
                Pos("x", "(2,11)->(2,12)"),
                Pos("y", "(2,15)->(2,16)"),
            ],
            scope_range: "(1,18)->(4,0)",
            parent_range: Some(
                "(0,0)->(4,2)",
            ),
            children: [],
        },
    ],
}

========================

[
    "Code is unreachable (3,4)->(3,18)",
]
