src/eval/snapshots/monkey_language_server__eval__test__func_nil_return.snap
---
source: src/eval/test.rs
description: "\nlet f = fn() { };\nlet a = f();\n"
expression: "format!(\"{:#?}\\n\\n========================\\n\\n{:#?}\", env, diags)"
---
Environment {
    store: [
        Value("f", Function([], Nil), (1,4)->(1,5), (1,0)->(1,17)),
        Value("a", Nil, (2,4)->(2,5), (2,0)->(2,12)),
    ],
    refs: [
        Pos("f", "(1,4)->(1,5)"),
        Pos("f", "(2,8)->(2,9)"),
        Pos("a", "(2,4)->(2,5)"),
    ],
    scope_range: "(0,0)->(2,12)",
    parent_range: None,
    children: [
        Environment {
            store: [],
            refs: [],
            scope_range: "(1,13)->(1,15)",
            parent_range: Some(
                "(0,0)->(2,12)",
            ),
            children: [],
        },
    ],
}

========================

[]
