src/eval/snapshots/monkey_language_server__eval__test__hash_known_ident.snap
---
source: src/eval/test.rs
description: "\nlet a = 1;\nlet x = {a: \"foo\", \"a\": 2};\n"
expression: "format!(\"{:#?}\\n\\n========================\\n\\n{:#?}\", env, diags)"
---
Environment {
    store: [
        (
            "a",
            Pos(Int, (1,4)->(1,5)),
        ),
        (
            "x",
            Pos(Hash, (2,4)->(2,5)),
        ),
    ],
    refs: [
        Pos("a", "(1,4)->(1,5)"),
        Pos("a", "(2,9)->(2,10)"),
        Pos("x", "(2,4)->(2,5)"),
    ],
    scope_range: "(0,0)->(2,27)",
    parent_range: None,
    children: [],
}

========================

[]
