src/eval/snapshots/monkey_language_server__eval__test__hash_unknown_ident.snap
---
source: src/eval/test.rs
description: "let x = {a: \"foo\", \"a\": b};"
expression: "format!(\"{:#?}\\n\\n========================\\n\\n{:#?}\", env, diags)"
---
Environment {
    store: [
        Value("x", Hash, (0,4)->(0,5), (0,0)->(0,27)),
    ],
    refs: [
        Pos("x", "(0,4)->(0,5)"),
    ],
    scope_range: "(0,0)->(0,27)",
    parent_range: None,
    children: [],
}

========================

[
    "NameError: 'a' is not defined. (0,9)->(0,10)",
    "NameError: 'b' is not defined. (0,24)->(0,25)",
]
