src/eval/snapshots/monkey_language_server__eval__test__if_bad_condition.snap
---
source: src/eval/test.rs
description: "let x = if (@) { 1 } else { 2 };"
expression: "format!(\"{:#?}\\n\\n========================\\n\\n{:#?}\", env, diags)"
---
Environment {
    store: [
        (
            "x",
            Pos(Unknown, (0,4)->(0,5)),
        ),
    ],
    refs: [
        Pos("x", "(0,4)->(0,5)"),
    ],
    scope_range: "(0,0)->(0,32)",
    parent_range: None,
    children: [
        Environment {
            store: [],
            refs: [],
            scope_range: "(0,15)->(0,19)",
            parent_range: Some(
                "(0,0)->(0,32)",
            ),
            children: [],
        },
        Environment {
            store: [],
            refs: [],
            scope_range: "(0,26)->(0,30)",
            parent_range: Some(
                "(0,0)->(0,32)",
            ),
            children: [],
        },
    ],
}

========================

[
    "SyntaxError: Unexpected '@'. (0,12)->(0,13)",
]
